--- a/app/static/scss/portfolio/layout.scss
+++ b/app/static/scss/portfolio/layout.scss
@@ -71,10 +71,11 @@ html, body {
 }
 
 .project {
-  clear: both;
-  margin: 0;
-  padding: 0 0 3em 0;
-  overflow: hidden;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  align-items: center;
 }
 
 .description {
@@ -85,8 +86,9 @@ html, body {
 }
 
 .project-description, .project-screenshots {
-  padding: 5em 1em 0 1em;
-  width: 100%;
+  flex: 1 100%;
+  padding: 2em 1em 2em 1em;
+  margin: auto;
 }
 
 #nav-menu {
@@ -127,15 +129,8 @@ footer {
     display: none;
   }
 
-  .project-screenshots, .project-description {
-    width: 50%;
-  }
-
-  .project-description {
-    float: left;
-  }
-
-  .project-screenshots {
-    float: right;
+  .project-description, .project-screenshots {
+    flex: 1 50%;
+    padding: 3em 1em 3em 1em;
   }
 }
