--- a/app/static/scss/portfolio/layout.scss
+++ b/app/static/scss/portfolio/layout.scss
@@ -1,5 +1,3 @@
-@import 'base';
-
 html {
   box-sizing: border-box;
 }
@@ -18,10 +16,8 @@ html, body {
   position: fixed;
   z-index: 1000;
   top: 0;
-  text-align: center;
   width: 100%;
   height: auto;
-  background-color: $pink;
   margin: 0;
   padding: 1em;
 }
@@ -31,7 +27,7 @@ html, body {
   position: absolute;
   height: 100%;
   z-index: 1000;
-  background-color: $purple;
+  background-color: $five;
   margin: 0;
   padding: 0;
   width: 100%;
@@ -128,9 +124,9 @@ footer {
   .nav-button {
     display: none;
   }
-
+  
   .project-description, .project-screenshots {
     flex: 1 50%;
-    padding: 3em 1em 3em 1em;
+    padding: 5em 1em 5em 1em;
   }
 }
