--- a/app/static/scss/portfolio/typography.scss
+++ b/app/static/scss/portfolio/typography.scss
@@ -1,7 +1,10 @@
-@import 'base';
-
 body {
-  background-color: $pink-white;
+  background-color: $five;
+}
+
+.sticky {
+  background-color: $five;
+  text-align: center;
 }
 
 h1 {
@@ -11,7 +14,7 @@ h1 {
   font-weight: 200;
   font-size: 4em;
   line-height: 1;
-  color: $fg;
+  color: $one;
 }
 
 h2 {
@@ -33,33 +36,33 @@ h3 {
 }
 
 #sethbaker {
-  color: $pink-white;
-  background-color: $mauve;
+  color: $one;
+  background-color: $two-active;
 }
 
 #todayiread {
-  color: $mauve;
-  background-color: $pink-white;
+  color: $one;
+  background-color: $three-active;
 }
 
 #balladmonger {
-  color: $mauve;
-  background-color: $pink-white;
+  color: $one;
+  background-color: $three-active;
 }
 
 #iamkyle {
-  color: $pink-white;
-  background-color: $purple;
+  color: $one;
+  background-color: $four;
 }
 
 #skills {
-  color: $pink-white;
-  background-color: $mauve;
+  color: $one;
+  background-color: $two-active;
 }
 
 #contact {
-  color: $pink-white;
-  background-color: $purple;
+  color: $one;
+  background-color: $four;
 }
 
 .footnote {
@@ -95,7 +98,7 @@ dt {
   font-family: $mainfont;
   font-weight: 400;
   font-size: 1.5em;
-  color: $fg;
+  color: $one;
 }
 
 .project-subheading {
@@ -111,7 +114,7 @@ dt {
   padding: 0.5em 1em 0.5em 1em;
   max-width: 600px;
   font-family: $mainfont;
-  color: $fg;
+  color: $one;
   font-size: 1.25em;
   line-height: 1.3;
   font-weight: 400;
@@ -149,14 +152,14 @@ dt {
 }
 
 .external-links a {
-  color: $pink;
   text-decoration: none;
   font-size: 3em;
   @include transition(color, .25s);
+  color: $three;
 }
 
 .external-links a:hover {
-  color: $mauve;
+  color: $three-active;
   @include transition(color, .25s);
 }
 
@@ -167,60 +170,56 @@ dt {
 .nav-menu a, .sticky a {
   font-family: $mainfont;
   text-transform: uppercase;
-  color: $pink-white;
+  color: $one;
   font-weight: 200;
   text-decoration: none;
   @include transition(border-bottom-color, .25s);
 }
 
 a.selected {
-  border-bottom: 1px solid $pink-white;
+  border-bottom: 1px solid $one;
 }
 
 .sticky a:hover, .nav-menu a:hover {
-  border-bottom: 1px solid $pink-white;
+  border-bottom: 1px solid $one;
   @include transition(border-bottom, .25s);
 }
 
-.nav-menu a:active {
-  color: $pink;
-}
-
 #sethbaker a, #contact a {
-  @include project-link($pink-white);
+  @include project-link($one);
 }
 
 #sethbaker a:hover, #contact a:hover {
-  @include project-link($fg);
+  @include project-link($one-active);
 }
 
 #todayiread a {
-  @include project-link($mauve);
+  @include project-link($one);
 }
 
 #todayiread a:hover {
-  @include project-link($pink);
+  @include project-link($one-active);
 }
 
 #balladmonger a {
-  @include project-link($mauve);
+  @include project-link($one);
 }
 
 #balladmonger a:hover {
-  @include project-link($pink);
+  @include project-link($one-active);
 }
 
 #iamkyle a {
-  @include project-link($pink-white);
+  @include project-link($one);
 }
 
 #iamkyle a:hover {
-  @include project-link($fg);
+  @include project-link($one-active);
 }
 
 .nav-button button {
   font-size: 1.5em;
-  color: $pink-white;
+  color: $one;
   background-color: Transparent;
   background-repeat: no-repeat;
   cursor: pointer;
@@ -230,8 +229,8 @@ a.selected {
 }
 
 footer {
-  background-color: $pink;
-  color: $pink-white;
+  background-color: $five;
+  color: $one;
   font-family: $mainfont;
   font-weight: 200;
   font-size: 0.9em;
@@ -245,11 +244,11 @@ footer p {
 }
 
 footer a {
-  @include project-link($pink-white);
+  @include project-link($one);
 }
 
 footer a:hover {
-  @include project-link($mauve);
+  @include project-link($one-active);
 }
 
 @media only screen and (min-width: 375px) {
