Portfolio is now landing page

--- a/app/templates/static.html
+++ b/app/templates/static.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block page_title %}{{ post.title }}{% endblock %}
+{% block page_title %}Kyle R. Johnston - {{ post.title }}{% endblock %}
 
 {% if description %}
 {% block meta_description %}
