--- a/app/static/scss/portfolio/typography.scss
+++ b/app/static/scss/portfolio/typography.scss
@@ -68,7 +68,7 @@ h3 {
 .footnote {
   display: block;
   font-family: $mainfont;
-  font-weight: 200;
+  font-weight: 400;
   font-size: 0.9em;
 }
 
@@ -122,7 +122,7 @@ dt {
   text-align: left;
 }
 
-#projects p {
+#skills p, #projects p {
   font-family: $mainfont;
   font-size: 1.25em;
   font-weight: 400;
@@ -232,8 +232,8 @@ footer {
   background-color: $five;
   color: $one;
   font-family: $mainfont;
-  font-weight: 200;
-  font-size: 0.9em;
+  font-weight: 400;
+  font-size: 0.75em;
   line-height: 1.3;
   text-align: center;
 }
