--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -43,7 +43,7 @@
             <li class="nav"><a href="{{ url_for('main.blog') }}" class="nav" id="nav">Blog</a></li>
             <li class="nav"><a href="{{ url_for('main.archive') }}" class="nav" id="nav">Archive</a></li>
             <li class="nav"><a href="{{ url_for('main.about') }}" class="nav" id="nav">About</a></li>
-            <li class="nav"><a href="{{ url_for('main.projects') }}" class="nav" id="nav">Projects</a></li>
+            <li class="nav"><a href="{{ url_for('main.portfolio') }}" class="nav" id="nav">Portfolio</a></li>
             <li class="nav"><a href="{{ url_for('main.atom_feed') }}" class="atom" id="nav"><i class="fa fa-rss-square"></i></a></li>
           </ul>
         </div>
@@ -52,7 +52,7 @@
             <li class="nav"><a href="{{ url_for('main.blog') }}" class="nav" id="nav">Blog</a></li>
             <li class="nav"><a href="{{ url_for('main.archive') }}" class="nav" id="nav">Archive</a></li>
             <li class="nav"><a href="{{ url_for('main.about') }}" class="nav" id="nav">About</a></li>
-            <li class="nav"><a href="{{ url_for('main.projects') }}" class="nav" id="nav">Projects</a></li>
+            <li class="nav"><a href="{{ url_for('main.portfolio') }}" class="nav" id="nav">Portfolio</a></li>
             <li class="nav"><a href="{{ url_for('main.atom_feed') }}" class="nav" id="nav"><i class="fa fa-rss-square"></i> Atom Feed</a></li>
           </ul>
         </div>
