--- a/app/templates/portfolio.html
+++ b/app/templates/portfolio.html
@@ -3,11 +3,17 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <title>Kyle R. Johnston's Portfolio -- Full Stack Web Developer</title>
+    <meta name="description" content="The portfolio of Kyle Johnston, full stack web developer.">
+    <title>Kyle R. Johnston's Portfolio &mdash; Full Stack Web Developer</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='css/font-awesome-4.5.0/css/font-awesome.min.css') }}">
     {% assets "portfolio_css" %}
     <link rel="stylesheet" href="{{ ASSET_URL }}">
     {% endassets %}
+    <link rel="icon" type="image/png" href="{{ url_for('static', filename='img/favicon-32x32.png') }}" sizes="32x32">
+    <link rel="icon" type="image/png" href="{{ url_for('static', filename='img/favicon-194x194.png') }}" sizes="194x194">
+    <link rel="icon" type="image/png" href="{{ url_for('static', filename='img/favicon-96x96.png') }}" sizes="96x96">
+    <link rel="icon" type="image/png" href="{{ url_for('static', filename='img/android-chrome-192x192.png') }}" sizes="192x192">
+    <link rel="icon" type="image/png" href="{{ url_for('static', filename='img/favicon-16x16.png') }}" sizes="16x16">
   </head>
   <body>
     <div class="nav-button">
@@ -24,8 +30,8 @@
     <section id="about">
       <h1>Kyle R. Johnston</h1>
       <small class="subheading">Writer, researcher, full stack web developer</small>
-      <p>I’m a freelance, full-stack web developer and a graduate student in the English department at the University of Illinois at Urbana-Champaign where I research literary-historical trends using quantitative methods such as text-mining and topic modeling.</p>
-      <p>My passion is solving problems with code. As I reach the end of my Master’s degree program, I’ve decided to leave the world of humanities academia to become a professional web developer. I believe web technologies have the potential to change our society for the better, and I want to be a part of the vanguard spurring that change.</p>
+      <p>I’m a freelance, full stack web developer and a graduate student in the English department at the University of Illinois at Urbana-Champaign where I research literary-historical trends using quantitative methods such as text-mining and topic modeling.</p>
+      <p>My passion is solving problems with code. As I reach the end of my Master’s degree program, I’ve decided to leave the world of humanities academia to become a professional web developer. I believe web technologies have the potential to change our society for the better, and I want to be on the front lines spurring that change.</p>
       <ul class="external-links">
         <li><a href="http://github.com/kylerjohnston"><i class="fa fa-github"></i></a></li>
       </ul>
@@ -36,8 +42,8 @@
         <div class="project-description">
           <h2><a href="https://todayiread.xyz">todayiread.xyz</a></h2>
           <small class="project-subheading">March 2016 <a href="https://github.com/kylerjohnston/todayiread">View source code</a></small>
-          <p>Developed over two weekends, todayiread.xyz helps you keep track of your reading progress. Set goals. Track what you’ve read. Visualize your reading habits with sweet graphs.</p>
-          <p>I developed todayiread.xyz so I could keep track of the reading I was doing for school and visualize my reading habits. I used to use Goodreads to keep track of my reading, but I found that it didn’t match up with the kinds of reading I did in grad school: I wasn’t reading books, I was reading chapters and journal articles, and Goodreads didn’t let you record those things. todayiread.xyz lets you track any kind of reading you want. This is still very much a work in progress: it's more of a proof of concept than anything right now.</p>
+          <p>todayiread.xyz helps you keep track of your reading progress. Set goals. Track what you’ve read. Visualize your reading habits with sweet graphs.</p>
+          <p>I developed todayiread.xyz over two weekends so I could keep track of and visualize the reading I was doing for school. I used to use Goodreads to keep track of my reading, but I found that it didn’t match up with the kinds of reading I did in grad school: I wasn’t reading books, I was reading chapters and journal articles, and Goodreads didn’t let you record those things. todayiread.xyz lets you track any kind of reading you want. This is still very much a work in progress: I've only had about four days to work on it, so it's more of a proof of concept than anything right now.</p>
           <h3>Features</h3>
           <ul class="feature-list">
             <li>CRUD interface for managing reading sessions and user settings</li>
@@ -90,9 +96,9 @@
       </div>
       <div class="project" id="iamkyle">
         <div class="project-description">
-          <h2><a href="https://iamkyle.me">iamkyle.me</a></h2>
+          <h2><a href="{{ url_for('main.blog') }}">iamkyle.me</a></h2>
           <small class="project-subheading">January 2016 <a href="https://github.com/kylerjohnston/another-static-flask-blog">View source code</a></small>
-          <p>I wanted a place to write about the research I was doing in grad school and about my experience transitioning from an academic career in the humanities to a career in the tech industry&mdash;so I made this blog. My goal for this project was to make a blog with a minimalist aesthetic that’s really easy to manage. At first the site was hosted on Github pages, so my main goal was to use Flask to generate static HTML pages from markdown files. Now it's deployed on an Ubuntu VPS and runs dynamically.</p>
+          <p>I wanted a place to write about the stuff I was doing in grad school&mdash;so I made this blog. My goal for this project was to make a blog with a minimalist aesthetic that’s really easy to manage. It's been developed in an iterative fashion over the past few months. At first the site was hosted on Github Pages, so my main goal was to make something that could generate static HTML pages from markdown files, which necessarily limited what I could do with it. Now it's deployed on an Ubuntu VPS and runs dynamically, so I'm exploring new options for the site.</p>
           <h3>Features</h3>
           <ul class="feature-list">
             <li>Responsive UI</li>
@@ -145,6 +151,7 @@
     <section id="skills">
       <div class="description">
         <h2>Skills</h2>
+        <p>I'm a mostly-self-taught full stack developer. I've been developing websites since I was in middle school when I ran a couple phpBB message boards dedicated to talking about Linux. I've taken courses on data analysis with R and Python, but mostly I've taught myself. I am an expert Googler: I'm not satisfied until I fully understand what's causing a problem and the best way to fix it.</p>
         <dl>
           <dt>Coding</dt>
           <dd>Python, Javascript and jQuery, shell scripting, R</dd>
@@ -155,7 +162,7 @@
           <dt>Technologies</dt>
           <dd>Linux, git, SQL, Nginx</dd>
         </dl>
-        <small class="footnote">* Still learning!</small>
+        <small class="footnote">* Still learning! React, especially, is really changing the way I think about Javascript. It's a fun language!</small>
       </div>
     </section>
     <section id="contact">
@@ -172,7 +179,7 @@
     <footer>
       <p>&copy; 2016 Kyle Johnston.</p>
       <p>Library photo courtesy of <a href="http://barnimages.com">barnimages.com</a>.</p>
-      <p>iMac image derived from <a href="https://commons.wikimedia.org/wiki/File:IMac_vector.svg">Rafael Fernandez's</a> is licensed under a Creative Commons Attribution Sharealike License.</p>
+      <p>iMac image is derived from <a href="https://commons.wikimedia.org/wiki/File:IMac_vector.svg">Rafael Fernandez's</a> and licensed under a Creative Commons Attribution Sharealike License.</p>
       <p>Javascript and Python icons made by <a href="http://www.freepik.com" title="Freepik">Freepik</a> from <a href="http://www.flaticon.com" title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a>.</p>
     </footer>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
