Deletes unused icons and updates portfolio meta description

--- a/app/templates/portfolio.html
+++ b/app/templates/portfolio.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <meta name="description" content="The portfolio of Kyle Johnston, full stack web developer.">
+    <meta name="description" content="The portfolio of Kyle Johnston, full stack web developer. Kyle Johnston is a graduate student at the University of Illinois at Urbana-Champaign.">
     <title>Kyle R. Johnston's Portfolio &mdash; Full Stack Web Developer</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='css/font-awesome-4.5.0/css/font-awesome.min.css') }}">
     {% assets "portfolio_css" %}
