--- a/app/static/scss/portfolio/layout.scss
+++ b/app/static/scss/portfolio/layout.scss
@@ -60,13 +60,17 @@ html, body {
   position: relative;
   height: auto;
   text-align: center;
-  background-image: url('/static/img/portfolio/library-background.png');
+  background-image: url('/static/img/portfolio/library-background-1125x750.png');
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
 }
 
 .project {
+  display: -webkit-box;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
@@ -82,6 +86,10 @@ html, body {
 }
 
 .project-description, .project-screenshots {
+  -webkit-box-flex: 1 100%;
+  -moz-box-flex: 1 100%;
+  -webkit-flex: 1 100%;
+  -ms-flex: 1 100%;
   flex: 1 100%;
   padding: 2em 1em 2em 1em;
   margin: auto;
@@ -93,6 +101,18 @@ html, body {
 
 footer {
   padding: 1em;
+}
+
+@media only screen and (min-height: 750px) {
+  #about {
+    background-image: url('/static/img/portfolio/library-background-1163x775.png');
+  }
+}
+
+@media only screen and (min-height: 776px) {
+  #about {
+    background-image: url('/static/img/portfolio/library-background-2250x1500.png');
+  }
 }
 
 @media only screen and (min-width: 801px) {
@@ -126,6 +146,10 @@ footer {
   }
   
   .project-description, .project-screenshots {
+    -webkit-box-flex: 1 50%;
+    -moz-box-flex: 1 50%;
+    -webkit-flex: 1 50%;
+    -ms-flex: 1 50%;
     flex: 1 50%;
     padding: 5em 1em 5em 1em;
   }
