--- a/app/templates/portfolio.html
+++ b/app/templates/portfolio.html
@@ -180,7 +180,7 @@
       <p>&copy; 2016 Kyle Johnston.</p>
       <p>Library photo courtesy of <a href="http://barnimages.com">barnimages.com</a>.</p>
       <p>iMac image is derived from <a href="https://commons.wikimedia.org/wiki/File:IMac_vector.svg">Rafael Fernandez's</a> and licensed under a Creative Commons Attribution Sharealike License.</p>
-      <p>Javascript and Python icons made by <a href="http://www.freepik.com" title="Freepik">Freepik</a> from <a href="http://www.flaticon.com" title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a>.</p>
+      <p>Javascript and Python icons made by <a href="http://www.freepik.com" title="Freepik">Freepik</a> from <a href="http://www.flaticon.com" title="Flaticon">www.flaticon.com</a> are licensed by <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a>.</p>
     </footer>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
     <script src="{{ url_for('static', filename='js/portfolio.js') }}"></script>
