--- a/app/static/scss/resume/layout.scss
+++ b/app/static/scss/resume/layout.scss
@@ -63,7 +63,28 @@ html, body {
   background-color: $light-grey;
 }
 
+.mobile-nav-menu {
+  position: fixed;
+  top: 1em;
+  left: 1em;
+  z-index: 10000;
+}
+
+#mobile-nav {
+  display: none;
+  position: fixed;
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 1000;
+}
+
 @media only screen and (min-width: 1024px) {
+  .mobile-nav-menu {
+    display: none;
+  }
+
   .title-left {
     position: fixed;
         left: 0;
