--- a/app/static/scss/resume/typography.scss
+++ b/app/static/scss/resume/typography.scss
@@ -61,8 +61,8 @@ ul.icons {
   line-height: 0;
   font-weight: 400;
   font-style: italic;
-  font-size: 2em;
-  padding: 0;
+  font-size: 1.5em;
+  padding: 0.5em 0 0 0;
   margin: 0.5em 0 0.5em 0;
 }
 
@@ -132,12 +132,20 @@ a.header-link {
   transition-timing-function: linear;
   &:hover {
     color: $dark-grey;
-    padding-right: 0.5em;
   }
+}
+
+.pad-left {
+  padding-left: 0.5em;
 }
 
 dt {
   font-style: italic;
+}
+
+#nav-close {
+  display: none;
+  color: $light-grey;
 }
 
 @media only screen and (min-width: 801px) {
@@ -164,4 +172,40 @@ dt {
     font-weight: 400;
     font-style: italic;
   }
+}
+
+.mobile-nav-menu {
+  color: $dark-grey;
+  font-size: 1.5em;
+}
+
+#mobile-nav {
+  background-color: $primary;
+  color: $light-grey;
+}
+
+ul.mobile-menu {
+  padding: 3em 0 0 0;
+  list-style-type: none;
+}
+
+.mobile-menu li {
+  text-align: center;
+  width: 100%;
+  padding: 1em;
+}
+
+.mobile-menu a {
+  color: $light-grey;
+  font-family: $sans-serif-font;
+  font-size: 3em;
+  font-weight: 100;
+  text-decoration: none;
+  &:hover {
+    border-bottom: 2px solid $darker-primary;
+  }
+}
+
+#nav-open {
+  display: none;
 }
